# excel-parser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: excel-structure-inspector-implementation-plan.md  excel-structure-inspector-spec.md  excel-structure-inspector-v2-plan.md
excel_inspector/: __init__.py  __main__.py  _time_axis.py  aggregator.py  context.py  exceptions.py  heuristics.py  loader.py  models.py  options.py  pipeline.py  results.py
excel_inspector/adapters/: __init__.py  pandas_loader.py
excel_inspector/analyzers/: __init__.py  block_analyzer.py  block_segmenter.py  boundary_detector.py  formula_detector.py  header_locator.py  merge_analyzer.py  sheet_enumerator.py  type_profiler.py
tests/: conftest.py  test_aggregator.py  test_aggregator_coords.py  test_block_override.py  test_block_segmenter.py  test_boundary_detector.py  test_cli.py  test_edge_cases.py  test_end_to_end.py  test_fixtures.py  test_formula_detector.py  test_header_locator.py  test_idempotency.py  test_loader.py  test_merge_analyzer.py  test_merge_bridge.py  test_multi_level_load.py  test_multi_table.py  test_options_sentinel.py  test_pandas_loader.py  test_performance.py  test_pipeline_smoke.py  test_public_api.py  test_readonly_property.py  test_results.py  test_sheet_enumerator.py  test_type_profiler.py
tests/fixtures/: blank_run_terminates.xlsx  build_complex_demo.py  complex_demo.xlsx  corrupt.xlsx  cover_offset.xlsx  cover_sparse.xlsx  empty_sheet.xlsx  encrypted.xlsx  formulas.xlsx  formulas_cached.xlsx  generate.py  header_offset.xlsx  (+23 more)
(+6 files in other folders)
